--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,8 @@
-theme = "catppuccin_macchiato"
+# theme = "catppuccin_macchiato"
+theme = "gruvbox_dark_hard"
 
 [editor]
+rulers = [80, 100]
 
 [editor.cursor-shape]
 insert = "bar"
