Added tinymist for typst

--- a/languages.toml
+++ b/languages.toml
@@ -5,3 +5,10 @@ args = ["--stdio"]
 [[language]]
 name = "markdown"
 language-servers = ["markdown-oxide", "harper-ls"]
+
+[language-server.tinymist]
+command = "tinymist"
+
+[[language]]
+name = "typst"
+language-servers = ["tinymist"]
