--- a/languages.toml
+++ b/languages.toml
@@ -4,11 +4,11 @@ args = ["--stdio"]
 
 [[language]]
 name = "markdown"
-language-servers = ["markdown-oxide", "harper-ls"]
+language-servers = ["marksman", "harper-ls"]
 
 [language-server.tinymist]
 command = "tinymist"
 
 [[language]]
 name = "typst"
-language-servers = ["tinymist"]
+language-servers = ["tinymist", "harper-ls"]
