Disabled other lines hint because harper was annoying

--- a/config.toml
+++ b/config.toml
@@ -75,5 +75,5 @@ C-y = [
 "C-del" = "delete_word_forward"
 
 [editor.inline-diagnostics]
-other-lines = "hint"
+other-lines = "disable"
 cursor-line = "hint"
