Disabled annoying harper settings

--- a/languages.toml
+++ b/languages.toml
@@ -2,6 +2,10 @@
 command = "harper-ls"
 args = ["--stdio"]
 
+[language-server.harper-ls.config.harper-ls.linters]
+Spaces = false
+LongSentences = false
+
 [[language]]
 name = "markdown"
 language-servers = ["marksman", "harper-ls"]
