--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ rulers = [80, 100]
 cursorline = true
 color-modes = true
 true-color = true
-rainbow-brackets = true
+# rainbow-brackets = true
 jump-label-alphabet = "smtneriacgwlypfouqjvdhbxkz"
 shell = ["powershell", "-NoProfile", "-Command"]
 
