--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ rulers = [80, 100]
 cursorline = true
 color-modes = true
 true-color = true
-# rainbow-brackets = true
+# rainbow-brackets = true # Disabled since it currently requires building from source.
 line-number = "relative"
 # shell = ["powershell", "-NoProfile", "-Command"]
 shell = ["nu", "-c"]
@@ -19,7 +19,7 @@ select = "underline"
 
 [editor.statusline]
 left = ["mode", "spinner", "read-only-indicator", "file-modification-indicator"]
-center = ["file-name", "version-control"]
+center = ["file-name",]
 right = ["diagnostics", "selections", "position", "file-encoding", "file-type"]
 separator = "│"
 mode.normal = "NORMAL"
@@ -39,13 +39,37 @@ other-lines = "disable"
 cursor-line = "hint"
 
 [keys.normal]
+# Quick iteration on config changes.
+C-o = ":config-open"
+C-r = ":config-reload"
+
+# Movement keymaps.
+H = "move_prev_sub_word_start"
+L = "move_next_sub_word_start"
+"{" = ["goto_prev_paragraph", "collapse_selection"]
+"}" = ["goto_next_paragraph", "collapse_selection"]
+
+# Escape madness easily.
+esc = ["collapse_selection", "keep_primary_selection"]
+
+# Allows adding newlines easier.
+o = ["open_below", "normal_mode"]
+O = ["open_above", "normal_mode"]
+
+# Moving things to next line;
+# useful for semantic linefeeds.
 q = ["move_prev_word_start", "insert_newline"]
 Q = ["move_prev_long_word_start", "insert_newline"]
+
+# Remapping macros to facilitate the above
+# since I very, very rarely use macros.
 C-q = "record_macro"
 A-q = "replay_macro"
+
+# Helix should have this by default
 X = "select_line_above"
-C-a = "select_all"
-C-s = ":w"
+
+# Allow moving lines up and down
 "A-j" = ["extend_to_line_bounds", "delete_selection", "paste_after"]
 "A-k" = [
   "extend_to_line_bounds",
@@ -53,18 +77,18 @@ C-s = ":w"
   "move_line_up",
   "paste_before",
 ]
+
+# More ergonomic than <gw>,
+# especially in my Night keyboard layout.
 ret = "goto_word"
-"{" = "goto_prev_paragraph"
-"}" = "goto_next_paragraph"
-H = "move_prev_sub_word_start"
-L = "move_next_sub_word_start"
+
+# Currently disabled bc it breaks in Windows + Nushell
 # C-y = [
 #   ':sh del C:\temp\unique-file',
 #   ':insert-output yazi.exe %{buffer_name} --chooser-file=C:\temp\unique-file',
 #   ':open %sh{type C:\temp\unique-file}',
 #   ":redraw",
 # ]
-minus = "trim_selections"
 
 # Commands designed to work with my `zettel-cli` program
 [keys.normal."space".z]
@@ -99,7 +123,14 @@ f = "page_down"
 u = "page_cursor_half_up"
 d = "page_cursor_half_down"
 
+[keys.select]
+# Allow selecting paragraphs finally.
+"{" = ["extend_to_line_bounds", "goto_prev_paragraph"]
+"}" = ["extend_to_line_bounds", "goto_next_paragraph"]
+
 [keys.insert]
+# Makes word deletes from other programs work here.
 "C-backspace" = "delete_word_backward"
 "C-del" = "delete_word_forward"
+
 
