--- a/languages.toml
+++ b/languages.toml
@@ -13,6 +13,7 @@ command = "tinymist"
 name = "markdown"
 language-servers = ["marksman", "harper-ls"]
 formatter = { command = "dprint", args = ["fmt", "--stdin", "md"] }
+auto-format = true
 
 [[language]]
 name = "typst"
