--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,12 @@ shell = ["nu", "-c"]
 jump-label-alphabet = "smtneriacgwlypfouqjvdhbxkz"
 end-of-line-diagnostics = "disable"
 # shell = ["powershell", "-NoProfile", "-Command"]
-# rainbow-brackets = true # Disabled since it currently requires building from source.
+# This was previously disabled
+# since I can't build from source on my work PC,
+# but thankfully,
+# I can just copy the .exe and grammars
+# over on a thumb drive
+rainbow-brackets = true # Disabled since it currently requires building from source.
 
 [editor.cursor-shape]
 insert = "bar"
