--- a/config.toml
+++ b/config.toml
@@ -11,8 +11,8 @@ line-number = "relative"
 shell = ["nu", "-c"]
 jump-label-alphabet = "smtneriacgwlypfouqjvdhbxkz"
 end-of-line-diagnostics = "disable"
+rainbow-brackets = true 
 # shell = ["powershell", "-NoProfile", "-Command"]
-# rainbow-brackets = true # Disabled since it currently requires building from source.
 
 [editor.cursor-shape]
 insert = "bar"
@@ -40,6 +40,10 @@ mode.select = "SELECT"
 [editor.indent-guides]
 render = true
 character = "⸽"
+
+[editor.whitespace]
+render.newline = "all"
+characters.newline = "⏎"
 
 [editor.soft-wrap]
 enable = true
@@ -78,16 +82,6 @@ esc = ["collapse_selection", "keep_primary_selection"]
 o = ["open_below", "normal_mode"]
 O = ["open_above", "normal_mode"]
  
-# From helix-vim:
-# If you want to keep the selection-while-moving behaviour of Helix, this two lines will help a lot,
-# especially if you find having text remain selected while you have switched to insert or append mode
-#
-# There is no real difference if you have overridden the commands bound to 'w', 'e' and 'b' like above
-# But if you really want to get familiar with the Helix way of selecting-while-moving, comment the
-# bindings for 'w', 'e', and 'b' out and leave the bindings for 'i' and 'a' active below. A world of difference!
-i = ["insert_mode", "collapse_selection"]
-a = ["append_mode", "collapse_selection"]
-
 # Moving things to next line;
 # useful for semantic linefeeds.
 q = ["move_prev_word_start", "insert_newline"]
@@ -100,6 +94,12 @@ A-q = "replay_macro"
 
 # Helix should have this by default
 X = "select_line_above"
+
+# Allows selecting line without whitespace
+A-x = ["extend_line_below", "trim_selections"]
+
+# Allows trimming the selection easier.
+"-" = "trim_selections"
 
 # Allow moving lines up and down
 "A-j" = [
@@ -171,6 +171,9 @@ Z = ":wq"
 # Allow selecting paragraphs, finally.
 "{" = ["extend_to_line_bounds", "goto_prev_paragraph"]
 "}" = ["extend_to_line_bounds", "goto_next_paragraph"]
+
+# Allows trimming the selection easier.
+"-" = "trim_selections"
 
 [keys.insert]
 # Makes word deletes from other programs work here.
